# stock-market-trend-prediction-system

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: daily_stock_update.yml
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py
app/: auth.py  database.py  ingestion.py  main.py  manualadd.py  migrate_data.py  models.py  schemas.py  sync_stocks.py  update_stock_metrics.py
app/routes/: auth.py  broadcasts.py  feedback.py  miscellaneous.py  news.py  pages.py  portfolio.py  predict.py  research.py  screener.py  stocks.py  test.py
app/static/css/: dark_mode.css  logoutanimate.css  style.css
app/static/js/: logoutanimate.js
app/templates/: about.html  base.html  base1.html  forgot_password.html  home.html  login.html  register_choice.html  register_customer.html  register_fin.html  verify_email.html
app/templates/dashboards/: admin_dashboard.html  customer_dashboard.html  fin_dashboard.html
