[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.2",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.12.1",
    "duckduckgo-search>=8.1.1",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "pandas-market-calendars>=5.3.1.2",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.40.0",
    "xgboost>=3.2.0",
    "yfinance>=1.1.0",
]
